crates/cli/tests/snapshots/parse__correct_variable_ranges_in_snippet_with_multiple_contexts.snap
---
source: apps/marzano/cli/tests/parse.rs
expression: "parsed_lines[0]"
---
__typename: PatternInfo
messages: []
variables:
  - name: $new_files
    scopedName: 0_0_$new_files
    ranges: []
  - name: $program
    scopedName: 0_1_$program
    ranges: []
  - name: $filename
    scopedName: 0_2_$filename
    ranges: []
  - name: $absolute_filename
    scopedName: 0_3_$absolute_filename
    ranges: []
  - name: $body
    scopedName: 11_0_$body
    ranges:
      - start:
          line: 1
          column: 16
        end:
          line: 1
          column: 21
        startByte: 15
        endByte: 20
  - name: $match
    scopedName: 11_1_$match
    ranges: []
sourceFile: "`function () { $body }`"
parsedPattern: "[..]"
valid: true

