crates/cli/tests/snapshots/parse__correct_variable_ranges_multiple_snippets_multiple_contexts.snap
---
source: apps/marzano/cli/tests/parse.rs
expression: "parsed_lines[0]"
---
__typename: PatternInfo
messages: []
variables:
  - name: $new_files
    scopedName: 0_0_$new_files
    ranges: []
  - name: $program
    scopedName: 0_1_$program
    ranges: []
  - name: $filename
    scopedName: 0_2_$filename
    ranges: []
  - name: $absolute_filename
    scopedName: 0_3_$absolute_filename
    ranges: []
  - name: $match
    scopedName: 11_0_$match
    ranges: []
  - name: $body
    scopedName: 12_0_$body
    ranges:
      - start:
          line: 1
          column: 33
        end:
          line: 1
          column: 38
        startByte: 32
        endByte: 37
  - name: $args
    scopedName: 12_1_$args
    ranges:
      - start:
          line: 1
          column: 24
        end:
          line: 1
          column: 29
        startByte: 23
        endByte: 28
  - name: $body
    scopedName: 13_0_$body
    ranges:
      - start:
          line: 1
          column: 64
        end:
          line: 1
          column: 69
        startByte: 63
        endByte: 68
  - name: $args
    scopedName: 13_1_$args
    ranges:
      - start:
          line: 1
          column: 52
        end:
          line: 1
          column: 57
        startByte: 51
        endByte: 56
sourceFile: "or { bubble `function ($args) { $body }`, bubble `($args) => { $body }` }"
parsedPattern: "[..]"
valid: true

