crates/cli/tests/snapshots/parse__parses_correct_scopes-2.snap
---
source: apps/marzano/cli/tests/parse.rs
expression: "parsed_lines[1]"
---
__typename: InputFile
sourceFile: file.ts
syntaxTree: "[..]"

